@@ -10,7 +10,7 @@ Class::Method::ModifiersX::Augment = 0.001
 Class::Null       = 2.101420
 File::Path        = 2.08
 Hash::Merge       = 0.12
-JSON              = 2.50
+JSON::MaybeXS     = 1.001000
 Module::Runtime   = 0.013
 Moo               = 1.003
 MooX::ClassStash  = 0.005
